// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ObjectPage FCL is enabled Create 2nd level page 1`] = `
Object {
  "config": Object {
    "routerClass": "sap.f.routing.Router",
  },
  "routes": Array [
    Object {
      "name": "RootEntityObjectPage",
      "pattern": "RootEntity({key}):?query:",
      "target": Array [
        "RootEntityObjectPage",
      ],
    },
    Object {
      "name": "ChildEntityObjectPage",
      "pattern": "RootEntity({key})/navToChildEntity({navToChildEntityKey}):?query:",
      "target": Array [
        "RootEntityObjectPage",
        "ChildEntityObjectPage",
      ],
    },
  ],
  "targets": Object {
    "ChildEntityObjectPage": Object {
      "controlAggregation": "midColumnPages",
      "id": "ChildEntityObjectPage",
      "name": "sap.fe.templates.ObjectPage",
      "options": Object {
        "settings": Object {
          "contextPath": "/ChildEntity",
          "navigation": Object {},
        },
      },
      "type": "Component",
    },
    "RootEntityListReport": Object {},
    "RootEntityObjectPage": Object {
      "options": Object {
        "settings": Object {
          "navigation": Object {
            "navToChildEntity": Object {
              "detail": Object {
                "route": "ChildEntityObjectPage",
              },
            },
          },
        },
      },
    },
  },
}
`;

exports[`ObjectPage FCL is enabled Create 3rd level page 1`] = `
Object {
  "config": Object {
    "routerClass": "sap.f.routing.Router",
  },
  "routes": Array [
    Object {
      "name": "RootEntityListReport",
      "pattern": ":?query:",
      "target": Array [
        "TestListReport",
      ],
    },
    Object {
      "name": "RootEntityObjectPage",
      "pattern": "RootEntity({RootEntityKey}):?query:",
      "target": Array [
        "TestListReport",
        "RootEntityObjectPage",
      ],
    },
    Object {
      "name": "ChildEntityObjectPage",
      "pattern": "RootEntity({RootEntityKey})/navToChildEntity({navToChildEntityKey}):?query:",
      "target": Array [
        "TestListReport",
        "RootEntityObjectPage",
        "ChildEntityObjectPage",
      ],
    },
  ],
  "targets": Object {
    "ChildEntityObjectPage": Object {
      "controlAggregation": "endColumnPages",
      "id": "ChildEntityObjectPage",
      "name": "sap.fe.templates.ObjectPage",
      "options": Object {
        "settings": Object {
          "contextPath": "/ChildEntity",
          "navigation": Object {},
        },
      },
      "type": "Component",
    },
    "RootEntityListReport": Object {},
    "RootEntityObjectPage": Object {
      "options": Object {
        "settings": Object {
          "navigation": Object {
            "navToChildEntity": Object {
              "detail": Object {
                "route": "ChildEntityObjectPage",
              },
            },
          },
        },
      },
    },
  },
}
`;

exports[`ObjectPage generate Add library dependency \`sap.fe.templates\`  1`] = `
Object {
  "libs": Object {
    "sap.fe.templates": Object {},
  },
}
`;

exports[`ObjectPage generate Add when "sap.fe.ariba" dependency is listed 1`] = `
Object {
  "sap.app": Object {
    "id": "my.test.App",
  },
  "sap.ui5": Object {
    "dependencies": Object {
      "libs": Object {
        "sap.fe.ariba": Object {},
        "sap.fe.templates": Object {},
      },
    },
    "routing": Object {
      "routes": Array [
        Object {
          "name": "RootEntityListReport",
          "pattern": ":?query:",
          "target": "TestListReport",
        },
        Object {
          "name": "RootEntityObjectPage",
          "pattern": "RootEntity({RootEntityKey}):?query:",
          "target": "RootEntityObjectPage",
        },
        Object {
          "name": "OtherEntityObjectPage",
          "pattern": "OtherEntity:?query:",
          "target": "OtherEntityObjectPage",
        },
      ],
      "targets": Object {
        "OtherEntityObjectPage": Object {
          "id": "OtherEntityObjectPage",
          "name": "sap.fe.ariba.ObjectPage",
          "options": Object {
            "settings": Object {
              "contextPath": "/OtherEntity",
              "navigation": Object {},
            },
          },
          "type": "Component",
        },
        "RootEntityListReport": Object {},
        "RootEntityObjectPage": Object {},
      },
    },
  },
}
`;

exports[`ObjectPage generate all optional settings 1`] = `
Object {
  "sap.app": Object {
    "id": "my.test.App",
  },
  "sap.ui5": Object {
    "dependencies": Object {
      "libs": Object {
        "sap.fe.templates": Object {},
      },
    },
    "routing": Object {
      "routes": Array [
        Object {
          "name": "RootEntityListReport",
          "pattern": ":?query:",
          "target": "TestListReport",
        },
        Object {
          "name": "RootEntityObjectPage",
          "pattern": "RootEntity({RootEntityKey}):?query:",
          "target": "RootEntityObjectPage",
        },
        Object {
          "name": "OtherEntityObjectPage",
          "pattern": "OtherEntity:?query:",
          "target": "OtherEntityObjectPage",
        },
      ],
      "targets": Object {
        "OtherEntityObjectPage": Object {
          "id": "OtherEntityObjectPage",
          "name": "sap.fe.templates.ObjectPage",
          "options": Object {
            "settings": Object {
              "contextPath": "/OtherEntity",
              "enhanceI18n": "i18n/customOtherEntityObjectPage.properties",
              "navigation": Object {},
              "variantManagement": "Page",
            },
          },
          "type": "Component",
        },
        "RootEntityListReport": Object {},
        "RootEntityObjectPage": Object {},
      },
    },
  },
}
`;

exports[`ObjectPage generate minimal input 1`] = `
Object {
  "sap.app": Object {
    "id": "my.test.App",
  },
  "sap.ui5": Object {
    "dependencies": Object {
      "libs": Object {
        "sap.fe.templates": Object {},
      },
    },
    "routing": Object {
      "routes": Array [
        Object {
          "name": "RootEntityListReport",
          "pattern": ":?query:",
          "target": "TestListReport",
        },
        Object {
          "name": "RootEntityObjectPage",
          "pattern": "RootEntity({RootEntityKey}):?query:",
          "target": "RootEntityObjectPage",
        },
        Object {
          "name": "OtherEntityObjectPage",
          "pattern": "OtherEntity:?query:",
          "target": "OtherEntityObjectPage",
        },
      ],
      "targets": Object {
        "OtherEntityObjectPage": Object {
          "id": "OtherEntityObjectPage",
          "name": "sap.fe.templates.ObjectPage",
          "options": Object {
            "settings": Object {
              "contextPath": "/OtherEntity",
              "navigation": Object {},
            },
          },
          "type": "Component",
        },
        "RootEntityListReport": Object {},
        "RootEntityObjectPage": Object {},
      },
    },
  },
}
`;

exports[`ObjectPage generate minimal input, plus minUi5Version and contextPath 1`] = `
Object {
  "sap.app": Object {
    "id": "my.test.App",
  },
  "sap.ui5": Object {
    "dependencies": Object {
      "libs": Object {
        "sap.fe.templates": Object {},
      },
    },
    "routing": Object {
      "routes": Array [
        Object {
          "name": "RootEntityListReport",
          "pattern": ":?query:",
          "target": "TestListReport",
        },
        Object {
          "name": "RootEntityObjectPage",
          "pattern": "RootEntity({RootEntityKey}):?query:",
          "target": "RootEntityObjectPage",
        },
        Object {
          "name": "OtherEntityObjectPage",
          "pattern": "OtherEntity:?query:",
          "target": "OtherEntityObjectPage",
        },
      ],
      "targets": Object {
        "OtherEntityObjectPage": Object {
          "id": "OtherEntityObjectPage",
          "name": "sap.fe.templates.ObjectPage",
          "options": Object {
            "settings": Object {
              "contextPath": "/my/navigation",
              "navigation": Object {},
            },
          },
          "type": "Component",
        },
        "RootEntityListReport": Object {},
        "RootEntityObjectPage": Object {},
      },
    },
  },
}
`;

exports[`ObjectPage generate minimal input, plus optional page id 1`] = `
Object {
  "sap.app": Object {
    "id": "my.test.App",
  },
  "sap.ui5": Object {
    "dependencies": Object {
      "libs": Object {
        "sap.fe.templates": Object {},
      },
    },
    "routing": Object {
      "routes": Array [
        Object {
          "name": "RootEntityListReport",
          "pattern": ":?query:",
          "target": "TestListReport",
        },
        Object {
          "name": "RootEntityObjectPage",
          "pattern": "RootEntity({RootEntityKey}):?query:",
          "target": "RootEntityObjectPage",
        },
        Object {
          "name": "DummyPage",
          "pattern": "OtherEntity:?query:",
          "target": "DummyPage",
        },
      ],
      "targets": Object {
        "DummyPage": Object {
          "id": "DummyPage",
          "name": "sap.fe.templates.ObjectPage",
          "options": Object {
            "settings": Object {
              "contextPath": "/OtherEntity",
              "navigation": Object {},
            },
          },
          "type": "Component",
        },
        "RootEntityListReport": Object {},
        "RootEntityObjectPage": Object {},
      },
    },
  },
}
`;

exports[`ObjectPage generate simple inbound navigation 1`] = `
Object {
  "routes": Array [
    Object {
      "name": "RootEntityListReport",
      "pattern": ":?query:",
      "target": "TestListReport",
    },
    Object {
      "name": "RootEntityObjectPage",
      "pattern": "RootEntity({RootEntityKey}):?query:",
      "target": "RootEntityObjectPage",
    },
    Object {
      "name": "OtherEntityObjectPage",
      "pattern": "OtherEntity({OtherEntityKey}):?query:",
      "target": "OtherEntityObjectPage",
    },
  ],
  "targets": Object {
    "OtherEntityObjectPage": Object {
      "id": "OtherEntityObjectPage",
      "name": "sap.fe.templates.ObjectPage",
      "options": Object {
        "settings": Object {
          "contextPath": "/OtherEntity",
          "navigation": Object {},
        },
      },
      "type": "Component",
    },
    "RootEntityListReport": Object {
      "options": Object {
        "settings": Object {
          "navigation": Object {
            "OtherEntity": Object {
              "detail": Object {
                "route": "OtherEntityObjectPage",
              },
            },
          },
        },
      },
    },
    "RootEntityObjectPage": Object {},
  },
}
`;

exports[`ObjectPage generate simple inbound navigation, plus optional page id 1`] = `
Object {
  "routes": Array [
    Object {
      "name": "RootEntityListReport",
      "pattern": ":?query:",
      "target": "TestListReport",
    },
    Object {
      "name": "RootEntityObjectPage",
      "pattern": "RootEntity({RootEntityKey}):?query:",
      "target": "RootEntityObjectPage",
    },
    Object {
      "name": "DummyPage",
      "pattern": "OtherEntity({OtherEntityKey}):?query:",
      "target": "DummyPage",
    },
  ],
  "targets": Object {
    "DummyPage": Object {
      "id": "DummyPage",
      "name": "sap.fe.templates.ObjectPage",
      "options": Object {
        "settings": Object {
          "contextPath": "/OtherEntity",
          "navigation": Object {},
        },
      },
      "type": "Component",
    },
    "RootEntityListReport": Object {
      "options": Object {
        "settings": Object {
          "navigation": Object {
            "OtherEntity": Object {
              "detail": Object {
                "route": "DummyPage",
              },
            },
          },
        },
      },
    },
    "RootEntityObjectPage": Object {},
  },
}
`;

exports[`ObjectPage generate simple nested navigation 1`] = `
Object {
  "routes": Array [
    Object {
      "name": "RootEntityListReport",
      "pattern": ":?query:",
      "target": "TestListReport",
    },
    Object {
      "name": "RootEntityObjectPage",
      "pattern": "RootEntity({RootEntityKey}):?query:",
      "target": "RootEntityObjectPage",
    },
    Object {
      "name": "OtherEntityObjectPage",
      "pattern": "RootEntity({RootEntityKey})/to_OtherEntity({to_OtherEntityKey}):?query:",
      "target": "OtherEntityObjectPage",
    },
  ],
  "targets": Object {
    "OtherEntityObjectPage": Object {
      "id": "OtherEntityObjectPage",
      "name": "sap.fe.templates.ObjectPage",
      "options": Object {
        "settings": Object {
          "contextPath": "/OtherEntity",
          "navigation": Object {},
        },
      },
      "type": "Component",
    },
    "RootEntityListReport": Object {},
    "RootEntityObjectPage": Object {
      "options": Object {
        "settings": Object {
          "navigation": Object {
            "to_OtherEntity": Object {
              "detail": Object {
                "route": "OtherEntityObjectPage",
              },
            },
          },
        },
      },
    },
  },
}
`;
